--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,3 @@
 FROM registry.redhat.io/ubi9
-RUN yum update && yum install -y git && yum clean all
+RUN yum update -y && yum install -y git && yum clean all
 USER vscode
