Adding features and p10k

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,6 @@
-FROM registry.redhat.io/ubi9
-RUN yum update -y && yum install -y git && yum clean all
+FROM registry.access.redhat.com/ubi9
+RUN yum update -y && yum install git sudo wget zsh -y
+RUN groupadd -g 911 sudo
+RUN useradd -G sudo -ms /bin/zsh vscode
+RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 USER vscode
