--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,5 +9,9 @@
             "extensions": [
             ]
         }
-    }
+    },
+    "features": {
+        "./pre-commit":{}
+    },
+    "postCreateCommand": "chmod +x ./.devcontainer/post-create.sh && ./.devcontainer/post-create.sh"
 }
