--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,11 +7,26 @@
                 "terminal.integrated.shell.linux": "/bin/zsh"
             },
             "extensions": [
-            ]
+				"ms-vscode.cpptools-extension-pack",
+				"ms-vscode.makefile-tools",
+				"GitHub.copilot-chat",
+				"ms-azuretools.vscode-docker",
+				"ms-vscode-remote.remote-containers"
+			]
         }
     },
     "features": {
-        "ghcr.io/rhel-yeah/features/pre-commit":{}
-    },
-    "postCreateCommand": "source ./.devcontainer/aliases.sh && chmod +x ./.devcontainer/post-create.sh && ./.devcontainer/post-create.sh"
+		"ghcr.io/devcontainers/features/common-utils:2": {
+			"installZsh": "true",
+			"username": "vscode",
+			"userUid": "1000",
+			"userGid": "1000",
+			"upgradePackages": "true"
+		}
+	},
+    "privileged":true,
+
+    "postCreateCommand": "sudo sed -i 's/enabled=1/enabled=0/' /etc/yum/pluginconf.d/subscription-manager.conf && chmod a+x ./.devcontainer/post-create.sh && ./.devcontainer/post-create.sh",
+  
+    "remoteUser": "vscode"
 }
