--- a/.github/workflows/build-ubi.yml
+++ b/.github/workflows/build-ubi.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: ./.devcontainer
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/ubi-nosub:rhel-${{ matrix.rhel_version }}
           build-args: |
