--- a/.github/workflows/build-ubi.yml
+++ b/.github/workflows/build-ubi.yml
@@ -4,6 +4,10 @@ name: Build and Push Docker Images
 on:
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+  
 jobs:
   build:
     runs-on: ubuntu-latest
