--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,7 @@
 	},
     "privileged":true,
 
-    "postCreateCommand": "sudo sed -i 's/enabled=1/enabled=0/' /etc/yum/pluginconf.d/subscription-manager.conf && chmod a+x ./.devcontainer/post-create.sh && ./.devcontainer/post-create.sh",
+    "postCreateCommand": "sudo sed -i 's/enabled=1/enabled=0/' /etc/yum/pluginconf.d/subscription-manager.conf && && sudo yum update && sudo yum install -y rpmlint rpmdevtools && chmod a+x ./.devcontainer/post-create.sh && ./.devcontainer/post-create.sh",
   
     "remoteUser": "vscode"
 }
