--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -27,4 +27,7 @@ ARG USER_GID=$USER_UID
 RUN yum update -y && yum install git sudo wget zsh -y
 RUN groupadd -g 911 sudo
 RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+
+RUN yum config-manager --add-repo https://cli.github.com/packages/rpm/gh-cli.repo && \
+yum -y install gh
 USER vscode
