--- a/.github/workflows/build-ubi.yml
+++ b/.github/workflows/build-ubi.yml
@@ -2,6 +2,7 @@ name: Build and Push Docker Images
 
 # Schedule the workflow to run daily at 00:00 UTC
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
 
