--- a/.github/workflows/build-ubi.yml
+++ b/.github/workflows/build-ubi.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        rhel_version: [7, 8, 9]
+        rhel_version: [8, 9]
 
     steps:
       - name: Check out repository
