--- a/.github/workflows/build-rocky.yml
+++ b/.github/workflows/build-rocky.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Images
+name: Build and Push RockyLinux Images
 
 # Schedule the workflow to run daily at 00:00 UTC
 on:
@@ -35,7 +35,7 @@ jobs:
           file: ./.devcontainer/Dockerfile-RockyLinux
           push: true
           
-          tags: ghcr.io/${{ github.repository_owner }}/devcontainer-rocky:{{ matrix.rhel_version }}
+          tags: ghcr.io/${{ github.repository_owner }}/devcontainer-rocky:${{ matrix.rhel_version }}
           build-args: |
             RHEL_VERSION=${{ matrix.rhel_version }}
 
