--- a/.github/workflows/build-ubi.yml
+++ b/.github/workflows/build-ubi.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Images
+name: Build and Push RHEL Images
 
 # Schedule the workflow to run daily at 00:00 UTC
 on:
@@ -34,7 +34,7 @@ jobs:
           context: ./.devcontainer
           push: true
           
-          tags: ghcr.io/${{ github.repository_owner }}/ubi-nosub:rhel-${{ matrix.rhel_version }}
+          tags: ghcr.io/${{ github.repository_owner }}/devcontainer-rhelyeah:rhel-${{ matrix.rhel_version }}
           build-args: |
             RHEL_VERSION=${{ matrix.rhel_version }}
 
