--- a/.github/workflows/build-rocky.yml
+++ b/.github/workflows/build-rocky.yml
@@ -35,7 +35,7 @@ jobs:
           file: ./.devcontainer/Dockerfile-RockyLinux
           push: true
           
-          tags: ghcr.io/${{ github.repository_owner }}/devcontainer-rocky:${{ matrix.rhel_version }}
+          tags: ghcr.io/${{ github.repository_owner }}/devcontainer-rhelyeah:rocky-${{ matrix.rhel_version }}
           build-args: |
             RHEL_VERSION=${{ matrix.rhel_version }}
 
