--- a/.devcontainer/Dockerfile-Fedora
+++ b/.devcontainer/Dockerfile-Fedora
@@ -1,8 +1,7 @@
 
 FROM fedora:latest
 
-RUN yum install -y "https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm" && \
-yum install -y "https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-9.noarch.rpm"
+RUN yum install -y "https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-9.noarch.rpm"
 
 # RUN sed -i 's/\(def in_container():\)/\1\n    return False/g' /usr/lib64/python*/*-packages/rhsm/config.py
 RUN yum update -y && yum install bash gdb strace git yum-utils -y
