--- a/.devcontainer/Dockerfile-Fedora
+++ b/.devcontainer/Dockerfile-Fedora
@@ -1,26 +1,28 @@
 
 FROM fedora:latest
 
-RUN yum install -y "https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-9.noarch.rpm"
+RUN dnf config-manager --set-enabled crb && \
+dnf install https://dl.fedoraproject.org/pub/epel/epel{,-next}-release-latest-9.noarch.rpm && \
+dnf install -y "https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-9.noarch.rpm"
 
 # RUN sed -i 's/\(def in_container():\)/\1\n    return False/g' /usr/lib64/python*/*-packages/rhsm/config.py
-RUN yum update -y && yum install bash gdb strace git yum-utils -y
+RUN dnf update -y && dnf install bash gdb strace git yum-utils -y
 # Install development tools and createrepo
-RUN yum -y update && \
-    yum -y install \
+RUN dnf -y update && \
+    dnf -y install \
     gcc \
     gcc-c++ \
     make 
 
 # Clean up Yum cache
-RUN yum clean all
+RUN dnf clean all
 
 # Create a non-root user and add sudo support
 ARG USERNAME=vscode
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
 
-RUN yum update -y && yum install git sudo wget zsh -y
+RUN dnf update -y && dnf install git sudo wget zsh -y
 RUN groupadd -g 911 sudo
 RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
