--- a/.devcontainer/Dockerfile-Fedora
+++ b/.devcontainer/Dockerfile-Fedora
@@ -1,8 +1,7 @@
 
 FROM fedora:latest
 
-RUN dnf config-manager --set-enabled crb && \
-dnf install https://dl.fedoraproject.org/pub/epel/epel{,-next}-release-latest-9.noarch.rpm && \
+RUN dnf install 'dnf-command(config-manager)' && \
 dnf install -y "https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-9.noarch.rpm"
 
 # RUN sed -i 's/\(def in_container():\)/\1\n    return False/g' /usr/lib64/python*/*-packages/rhsm/config.py
