--- a/.devcontainer/Dockerfile-RockyLinux
+++ b/.devcontainer/Dockerfile-RockyLinux
@@ -4,7 +4,7 @@ ARG RHEL_VERSION=8
 FROM rockylinux:${RHEL_VERSION}
 ARG RHEL_VERSION
 
-RUN dnf install -y 'dnf-command(config-manager)' && dnf config-manager --set-enabled crb && \
+RUN dnf install -y 'dnf-command(config-manager)' && \
 dnf install https://dl.fedoraproject.org/pub/epel/epel{,-next}-release-latest-9.noarch.rpm && \
 dnf install -y "https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-9.noarch.rpm"
 
