Fix up equals signs

--- a/.devcontainer/Dockerfile-RockyLinux
+++ b/.devcontainer/Dockerfile-RockyLinux
@@ -4,7 +4,7 @@ ARG RHEL_VERSION=8
 FROM rockylinux:${RHEL_VERSION}
 ARG RHEL_VERSION
 ARG CONFIG_PACKAGE="crb"
-RUN if [ "${RHEL_VERSION}" == "8"]; then \
+RUN if [ "${RHEL_VERSION}" = "8"]; then \
     CONFIG_PACKAGE="powertools" \
     fi
 
