Changing var evaluation

--- a/.devcontainer/Dockerfile-RockyLinux
+++ b/.devcontainer/Dockerfile-RockyLinux
@@ -1,12 +1,10 @@
 
 ARG RHEL_VERSION=8
+ARG CONFIG_PACKAGE="crb"
 
 FROM rockylinux:${RHEL_VERSION}
 ARG RHEL_VERSION
-ARG CONFIG_PACKAGE="crb"
-RUN if [ "${RHEL_VERSION}" = "8"]; then \
-    CONFIG_PACKAGE="powertools" \
-    fi
+ARG CONFIG_PACKAGE
 
 RUN dnf install -y 'dnf-command(config-manager)' && dnf config-manager --set-enabled ${CONFIG_PACKAGE} && \
 dnf install https://dl.fedoraproject.org/pub/epel/epel{,-next}-release-latest-9.noarch.rpm && \
