--- a/.devcontainer/Dockerfile-RockyLinux
+++ b/.devcontainer/Dockerfile-RockyLinux
@@ -7,8 +7,8 @@ ARG RHEL_VERSION
 ARG CONFIG_PACKAGE
 
 RUN dnf install -y 'dnf-command(config-manager)' && dnf config-manager --set-enabled ${CONFIG_PACKAGE} && \
-dnf install https://dl.fedoraproject.org/pub/epel/epel{,-next}-release-latest-9.noarch.rpm && \
-dnf install -y "https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-9.noarch.rpm"
+dnf install https://dl.fedoraproject.org/pub/epel/epel{,-next}-release-latest-${RHEL_VERSION}.noarch.rpm && \
+dnf install -y "https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-${RHEL_VERSION}.noarch.rpm"
 
 # RUN sed -i 's/\(def in_container():\)/\1\n    return False/g' /usr/lib64/python*/*-packages/rhsm/config.py
 RUN yum update -y && yum install bash gdb strace git yum-utils -y
