--- a/.devcontainer/Dockerfile-RockyLinux
+++ b/.devcontainer/Dockerfile-RockyLinux
@@ -7,7 +7,7 @@ ARG RHEL_VERSION
 ARG CONFIG_PACKAGE
 
 RUN dnf install -y 'dnf-command(config-manager)' && dnf config-manager --set-enabled ${CONFIG_PACKAGE} && \
-dnf install https://dl.fedoraproject.org/pub/epel/epel-release-latest-${RHEL_VERSION}.noarch.rpm && \
+dnf install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-${RHEL_VERSION}.noarch.rpm && \
 dnf install -y "https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-${RHEL_VERSION}.noarch.rpm"
 
 # RUN sed -i 's/\(def in_container():\)/\1\n    return False/g' /usr/lib64/python*/*-packages/rhsm/config.py
