--- a/.github/workflows/build-rocky.yml
+++ b/.github/workflows/build-rocky.yml
@@ -33,8 +33,8 @@ jobs:
         uses: docker/build-push-action@v4
         if: matrix.rhel_version == 9
         with:
-          context: ./.devcontainer
-          file: ./.devcontainer/Dockerfile-RockyLinux
+          context: ./.devcontainer/RockyLinux
+          file: ./.devcontainer/RockyLinux/Dockerfile
           push: true
           
           tags: ghcr.io/${{ github.repository_owner }}/devcontainer-rhelyeah:rocky-${{ matrix.rhel_version }}
@@ -54,20 +54,4 @@ jobs:
           build-args: |
             RHEL_VERSION=${{ matrix.rhel_version }}
             CONFIG_PACKAGE=powertools
-      
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
-        with:
-          image-ref: ghcr.io/${{ github.repository_owner }}/devcontainer-rhelyeah:rocky-${{ matrix.rhel_version }}
-          format: 'template'
-          template: '@/contrib/sarif.tpl'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
 
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: 'trivy-results.sarif'
-      
-      - name: Post build cleanup
-        run: docker system prune -f
