--- a/.github/workflows/build-ubi.yml
+++ b/.github/workflows/build-ubi.yml
@@ -40,6 +40,8 @@ jobs:
             RHEL_VERSION=${{ matrix.rhel_version }}
 
       - name: Run Trivy vulnerability scanner
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
         with:
           image-ref: 'ghcr.io/${{ github.repository_owner }}/devcontainer-rhelyeah:rhel-${{ matrix.rhel_version }}'
