--- a/.github/workflows/build-rocky.yml
+++ b/.github/workflows/build-rocky.yml
@@ -26,6 +26,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Set up Trivy
+        uses: aquasecurity/setup-trivy@v0.2.2
+        with:
+          cache: true
+          
       - name: Login to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
@@ -54,6 +59,7 @@ jobs:
           build-args: |
             RHEL_VERSION=${{ matrix.rhel_version }}
             CONFIG_PACKAGE=powertools
+      
       - name: Run Trivy vulnerability scanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
