--- a/.github/workflows/build-rocky.yml
+++ b/.github/workflows/build-rocky.yml
@@ -63,12 +63,12 @@ jobs:
       - name: Run Trivy vulnerability scanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
+        uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'ghcr.io/${{ github.repository_owner }}/devcontainer-rhelyeah:rocky-${{ matrix.rhel_version }}'
           format: 'template'
-          cache: 'true'
           template: '@/contrib/sarif.tpl'
+          skip-setup-trivy: true
           output: 'trivy-results-rocky-${{ matrix.rhel_version}}.sarif'
           severity: 'CRITICAL,HIGH'
           
