--- a/.github/workflows/build-ubi.yml
+++ b/.github/workflows/build-ubi.yml
@@ -49,6 +49,7 @@ jobs:
           template: '@/contrib/sarif.tpl'
           output: 'trivy-results-rhel-${{ matrix.rhel_version}}.sarif'
           severity: 'CRITICAL,HIGH'
+          token-setup-trivy: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
