--- a/.github/workflows/build-rocky.yml
+++ b/.github/workflows/build-rocky.yml
@@ -71,6 +71,7 @@ jobs:
           skip-setup-trivy: true
           output: 'trivy-results-rocky-${{ matrix.rhel_version}}.sarif'
           severity: 'CRITICAL,HIGH'
+          token-setup-trivy: ${{ secrets.GITHUB_TOKEN }}
           
       
       - name: Upload Trivy scan results to GitHub Security tab
