--- a/.github/workflows/build-fedora.yml
+++ b/.github/workflows/build-fedora.yml
@@ -44,6 +44,7 @@ jobs:
           template: '@/contrib/sarif.tpl'
           output: 'trivy-results-fedora.sarif'
           severity: 'CRITICAL,HIGH'
+          token-setup-trivy: ${{ secrets.GITHUB_TOKEN }}
   
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
