--- a/.github/workflows/build-rocky.yml
+++ b/.github/workflows/build-rocky.yml
@@ -30,6 +30,7 @@ jobs:
         uses: aquasecurity/setup-trivy@v0.2.2
         with:
           cache: true
+          token: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Login to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
