--- a/.github/workflows/build-fedora.yml
+++ b/.github/workflows/build-fedora.yml
@@ -18,7 +18,13 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
-
+        
+      - name: Aqua Security Trivy installer
+        uses: aquasecurity/setup-trivy@v0.2.2
+        with:
+          cache: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+          
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
