--- a/.github/workflows/build-rocky.yml
+++ b/.github/workflows/build-rocky.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        rhel_version: [8, 9]
+        rhel_version: [8, 9, 10]
 
     steps:
       - name: Check out repository
@@ -37,7 +37,7 @@ jobs:
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
-        if: matrix.rhel_version == 9
+        if: matrix.rhel_version != 8
         with:
           context: ./.devcontainer/RockyLinux
           file: ./.devcontainer/RockyLinux/Dockerfile
