Fix Dockerfile to use correct Rocky Linux image

--- a/.devcontainer/RockyLinux/Dockerfile
+++ b/.devcontainer/RockyLinux/Dockerfile
@@ -2,7 +2,7 @@
 ARG RHEL_VERSION=8
 ARG CONFIG_PACKAGE="crb"
 
-FROM rockylinux:${RHEL_VERSION}
+FROM rockylinux/rockylinux:${RHEL_VERSION}
 ARG RHEL_VERSION
 ARG CONFIG_PACKAGE
 
